implemented the Training class